tests/snapshots/examples_fixtures/type_system__failing__20_direct_builtin_missing_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/20_direct_builtin_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Time).

  examples/type_system/failing/20_direct_builtin_missing_effect.flx:10:1
   |
10 | tick()
   | ^^^^^^
   | ------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/type_system/failing/20_direct_builtin_missing_effect.flx:10:1
   |
10 | tick()
   | ^^^^^^
   | ------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Time` but the enclosing context does not provide it

  examples/type_system/failing/20_direct_builtin_missing_effect.flx:10:1
   |
10 | tick()
   | ^^^^^^
   | ------ requires `Time`

Hint:
  annotate the enclosing function with `with Time`


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 3 errors.
== stdout ==
<not executed>
