tests/snapshots/examples_fixtures/type_system__failing__22_effect_polymorphism_chain_missing_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/22_effect_polymorphism_chain_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `wrap_apply` requires effects `Console, FileSystem, Stdin` in this function signature.

  examples/type_system/failing/22_effect_polymorphism_chain_missing_effect.flx:37:5
   |
37 |     wrap_apply(io_inc, 41)
   |     ^^^^^^^^^^
   |     ---------- effectful call occurs here

Hint:
  Add `with Console, FileSystem, Stdin` to the enclosing function.
== stdout ==
<not executed>
