tests/snapshots/examples_fixtures/type_system__failing__23_generic_call_return_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/23_generic_call_return_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/23_generic_call_return_mismatch.flx:5:14
  |
5 | let x: Int = identity("hello")
  |              ^^^^^^^^^^^^^^^^^
  |              ----------------- this value has type `String`

  |        --- but `x` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `x` to a `Int` value or update the annotation.
== stdout ==
<not executed>
