tests/snapshots/examples_fixtures/type_system__failing__24_adt_guarded_non_exhaustive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/24_adt_guarded_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 2 missing patterns.

  examples/type_system/failing/24_adt_guarded_non_exhaustive.flx:32:5
   |
32 |     match x {
   |     ^^^^^^^^^
33 |         SomeI(v) if v > 0 -> v,
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
34 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
