tests/snapshots/examples_fixtures/type_system__failing__27_adt_wildcard_guard_not_catchall.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

A guarded wildcard `_ if ...` does not guarantee exhaustiveness because the guard may fail.

  examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx:9:5
   |
 9 |     match c {
   |     ^^^^^^^^^
10 |         _ if true -> 1,
   | ^^^^^^^^^^^^^^^^^^^^^^^
11 |     }
   | ^^^^^

Hint:
  Add an unguarded `_ -> ...` fallback arm after guarded arms.
== stdout ==
<not executed>
