tests/snapshots/examples_fixtures/type_system__failing__29_strict_missing_main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/29_strict_missing_main.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
